# smengine

./: .gitignore  GameEngine.cbp  GameEngine.depend  GameEngine.layout  GhostEngine.sln  GhostEngine.vcxproj  GhostEngine.vcxproj.filters  README.md  main_android.cpp  main_linux.cpp  main_macosx.cpp  main_windows.cpp
SMEngine/SMEngine.xcodeproj/: project.pbxproj
SMart Engine/SMart Engine.xcodeproj/: project.pbxproj
Tests/: ModelSerializer.cpp  Tests.vcxproj  Tests.vcxproj.filters  main.cpp
android/: AndroidManifest.xml
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/androidTest/java/lt/smworks/smengine/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/models/: cube.sm  dungeon.sm
android/app/src/main/assets/scripts/: main.lua  second.lua  text.lua
android/app/src/main/assets/shaders/: default_sprite.frag  loading.frag  loading.vert  sprite_background_ocean.frag  surface_bckg_color.frag  terrain.frag  terrain.vert  vertical_blur.frag  wall.frag  wallpaper_city.frag  wallpaper_fractal_3d_4.frag  wallpaper_grass.frag  wallpaper_grass_fields.frag  wallpaper_ocean.frag  wallpaper_octopus.frag  wallpaper_sun.frag  wallpaper_tunnel.frag  water.frag
android/app/src/main/assets/sounds/: sound.mid
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/lt/smworks/smengine/: JNI.java  MainActivity.java  OpenGLSurface.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/lt/smworks/smengine/: ExampleUnitTest.java
android/jni/: Android.mk  Android.mk~  Application.mk
ghost/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Console.cpp  Console.h  Engine.cpp  Engine.cpp~  Engine.h  Environment.cpp  Environment.h  FileManager.mm  FrameBuffer.cpp  FrameBuffer.h  GUIManager.cpp  GUIManager.h  HashMap.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Input.cpp  Input.h  MD2Parser.cpp  MD2Parser.h  Matrix.cpp  Matrix.h  ModelData.cpp  ModelData.h  NetworkManager.cpp  NetworkManager.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  (+50 more)
ghost/Extensions/: Vehicle.cpp  Vehicle.cpp~  Vehicle.h  Vehicle.h~
ghost/Multiplatform/: Database.cpp  Database.h  FileManager.h  Ghost.cpp  Ghost.h  GraphicsManager.cpp  GraphicsManager.h  ImageLoader.cpp  ImageLoader.h  ImageLoader.mm  Multiplatform.7z  NullGraphicsManager.cpp  NullGraphicsManager.h  ServiceLocator.cpp  ServiceLocator.cpp~  ServiceLocator.h  ServiceLocator.h~  Socket.h  SoundManager.h  SoundManager.h~  System.h  Thread.h
ghost/Network/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  NetworkManager.cpp  NetworkManager.h  Request.cpp  Request.h  Server.cpp  Server.h  SocketParams.cpp  SocketParams.h
releases/: android.keystore  android.txt  sm-live-wallpapers.apk
(+881 files in other folders)
